chnage somthing and resolve the spacing issues & put the animation

--- a/css/style2.css
+++ b/css/style2.css
@@ -335,7 +335,7 @@ xgallery
 
 @media only screen and (min-width: 1170px) {
   .cd-gallery {
-    padding: 50px 2%;
+    padding: 50px 5%;
     float: right;
     -webkit-transition: width 0.3s;
     -moz-transition: width 0.3s;
