--- a/scss/Service.css
+++ b/scss/Service.css
@@ -151,7 +151,8 @@ a, a:hover {
     transition: transform 0.3s ease;
   }
   .postcard .postcard__text {
-    padding: 3rem;
+    padding: 1.5rem;
+    padding-left: 50px;
     width: 100%;
   }
   .postcard .media.postcard__text:before {
